[tool.poetry]
name = "sdm-engine"
version = "0.1.0"
description = ""
authors = ["maxiee <maxieewong@gmail.com>"]
readme = "README.md"
packages = [{include = "sdm_engine"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
