[tool.poetry]
name = "sdm-engine"
version = "0.1.0"
description = ""
authors = ["maxiee <maxieewong@gmail.com>"]
readme = "README.md"
packages = [{include = "sdm_engine"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.2.0"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "sdm_engine.main:start"